<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EstiloCafe</string>
    <string name="action_sign_in">Entrar o Registarse</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">No es un nombre de usuario valido</string>
    <string name="login_failed">El Login falló</string>
    <string name="no_internet_msg">No te será posible compartir tus resultados</string>
    <string name="no_internet_title">Sin conexion internet</string>
    <string name="have_not_account">¿No tienes cuenta?</string>
    <string name="register_here">REGISTRATE AQUI</string>
    <string name="desc" translatable="false">Simple icon</string>
    <string name="login_title">Ingresar</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="pass_hint">Contraseña</string>
    <string name="recover_pass_hint">Olvide mi contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="error_generic_title">La accion no se pudo completar</string>
    <string name="error_save_user">Error inesperado al almacenar el usuario</string>
    <string name="error_save_questions">Error inesperado al actualizar las preguntas</string>
    <string name="ok_string" translatable="false">OK</string>
    <string name="go_settings_string">Ir a configuracion</string>
    <string name="error_pass_no_match">Las contraseñas no coinciden</string>
    <string name="error_no_pass">Ingresa una contraseña</string>
    <string name="error_email_registered">El email ingresado ya se encuentra registrado</string>
    <string name="opt_from_gallery">Imagen de galeria</string>
    <string name="opt_from_camera">Tomar foto</string>
    <string name="select_option">Selecciona una opcion</string>
    <string name="error_complete_profile_title">Informacion necesaria</string>
    <string name="error_complete_profile">Por favor complete la informacion de perfil para continuar.</string>
    <string name="error_complete_fields">Por favor completa todos campos para continuar</string>
    <string name="error_create_file">Se produjo un error inesperado al intentar crear el archivo</string>
    <string name="error_storage_permissions">Necesita otorgar permisos de almacenamiento para que la app funcione correctamente.</string>
    <string name="error_storage_permission_title">Permisos Insuficientes</string>
    <string name="error_save_file">Se produjo un error inesperado al intentar almacenar la imagen</string>
    <string name="error_select_image">Se produjo un error inesperado. La acción no se pudo completar.</string>
    <string name="error_username">Nombre de Usuario invalido</string>
    <string name="error_must_accept_terms">Debe aceptar los terminos y condiciones de uso para utilizar EscuelApp</string>
    <string name="error_must_accept_policy">Debe aceptar la politica de privacidad para utilizar EscuelApp</string>
    <string name="register_title">REGISTRATE AHORA</string>
    <string name="email_hint_require">Correo electronico *</string>
    <string name="pass_hint_require">Contraseña *</string>
    <string name="confirm_pass_require">Confirmar Contraseña *</string>
    <string name="register_button">REGISTRARSE</string>
    <string name="resend_code">Reenviar codigo</string>
    <string name="close_session">Cerrar Sesion</string>
    <string name="check_button">Verificar</string>
    <string name="verification_code_text">Codigo de Verificacion</string>
    <string name="error_wrong_email">Email invalido</string>
    <string name="error_pass_lenght">Contraseña debe ser mayor a 5 caractereds</string>
    <string name="wait_msg">Espere un momento</string>
    <string name="error_complete_email">Por favor completa el email para proceder con la recuperacion de la contraseña</string>
    <string name="error_login_google">Se produjo un error inesperado al intentar iniciar sesion con google</string>
    <string name="complete_profile_title">COMPLETA TU INFORMACIÓN</string>
    <string name="username_hint_required">Nombre de usuario *</string>
    <string name="confirm_button">CONFIRMAR</string>
    <string name="terms_of_services_string">He leído y acepto los</string>
    <string name="policy_string">He leído y acepto la</string>
    <string name="terms_of_services">Terminos y Condiciones</string>
    <string name="privacy_policy">Politica de Privacidad</string>
    <string name="accept_terms_and_conditions" translatable="false">He leído y acepto los términos y condiciones</string>
    <string name="accept_policy" translatable="false">He leído y acepto las políticas de privacidad</string>
    <string name="pricing">$100</string>
    <string name="product_name">Product Name</string>
    <string name="repeat_button">Repetir</string>
    <string name="view_button">Ver</string>
    <string name="order_date">18/12/2022</string>
</resources>