<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/order_date"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="2"
                android:text="@string/product_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalPricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pricing"
                android:textSize="14sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/repeatButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/progress_margin"
            android:text="@string/repeat_button"
            android:background="@drawable/rounded_view"
            android:textColor="@color/white"
            android:layout_marginRight="4dp"
            />

        <Button
            android:id="@+id/viewDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/progress_margin"
            android:text="@string/view_button"
            android:background="@drawable/rounded_view"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

