<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">


    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        />

    <LinearLayout
        android:id="@+id/linearLayoutNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:text="@string/no_internet_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/no_internet_msg"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="56dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:paddingTop="24dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/colorGray"
                    android:src="@drawable/ic_email"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/colorGray"
                    android:src="@drawable/ic_lock"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass_hint"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <TextView
                android:id="@+id/textViewPassRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_pass_hint"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/primaryDarkColor"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:background="@color/primaryLightColor"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:paddingBottom="30dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/have_not_account"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            />

    </LinearLayout>

</FrameLayout>